--- a/style.css
+++ b/style.css
@@ -2,13 +2,17 @@ body {
   background-color: #ffe4e1;
   color: #333;
 }
-header, footer {
+
+header,
+footer {
   background-color: #ffc0cb;
   color: white;
   padding: 1rem 0;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   color: #d87093;
 }
 
