--- a/style.css
+++ b/style.css
@@ -4,39 +4,27 @@ body {
 }
 
 header,
-footer {
-  background-color: #ffc0cb;
+footer,
+.bg-pink {
+  background-color: #ffc0cb !important;
   color: white;
-  padding: 1rem 0;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
   color: #d87093;
 }
 
-.navbar {
-  background-color: #ffc0cb; /* 導覽列背景統一 */
+.navbar-light .navbar-brand,
+.navbar-light .nav-link {
+  color: #d87093 !important;
 }
 
-.navbar-nav {
-  margin-left: auto;           /* 導覽列項目靠右 */
-  flex-direction: row;         /* 水平排列 */
-}
-
-.nav-link {
-  color: #d87093 !important;   /* 粉紅文字色 */
-  margin-left: 15px;
-}
-
-.nav-link:hover {
+.navbar-light .nav-link:hover {
   text-decoration: underline;
 }
 
-/* 品牌名稱 */
-.navbar-brand {
-  color: #d87093 !important;
+.navbar-nav {
+  flex-direction: row;
 }
 
 .card {
@@ -61,14 +49,12 @@ button:hover {
   background-color: #ff1493;
 }
 
-/* 個人照片樣式（補充） */
 img.rounded-circle {
   width: 200px;
   height: 200px;
   object-fit: cover;
 }
 
-/* sticky navbar（選用） */
 .sticky-top {
   position: sticky;
   top: 0;
